========================================
Change log for qtype_ordering
========================================

2019-12-14 (00)
 - Thanks Tim Hunt: (1) Update Behat tests to use the MDL-66821 changes (2) Fix Behat test that was failing
 - Thanks HuongNV13: (1) Items crash together horizontally (2) Number/letter no longer tracks with dragged item

2019-12-12 (98)
 - fix JS error on Moodle >= 3.7 caused by incorrect syntax in 'define' statement in key_codes.js

2019-10-24 (96)
 - standardize layout and spelling in CHANGES.txt

2019-10-06 (94)
 - fix behavior in Adaptive mode, with 'Whether correct' review option enabled

2019-07-31 (93)
 - (github-issue #43 and #44): rename upper case numberstyles to ABCD and IIII in order to differentiate from lower case styles on DBs, such as MySQL, which use case insensitive indexes.

2019-07-12 (92)
 - rename 'answernumbering' to 'numberingstyle' and include this field in import/export of xml/gift formats.

2019-07-11 (91)
 - intermittent commit to rename answeringnumbering to numberingstyle

2019-07-11 (90)
 - Qtype_ordering: Numbering for lists (123.., abc...) (#42) Thanks Mahmoud. Great job!

2019-03-06 (89)
 - fix URL of secondary zip download site

2019-03-06 (89)
 - fix small typo in behat test file

2019-03-06 (88)
 - fix small typo in language file and optimize logic in form validation

2019-03-05 (87)
 - Qtype ordering should not allow duplicatue items (#40) Thank you Mahmoud Kassaei for your continuing work to improve the Ordering question type

2019-02-19 (86)
 - small fix to spelling and whitespace

2019-02-19 (86)
 - qtype_ordering: Ordering codechecker (#39) * Code checker issues on edit_ordering_form.php * function question_register_questiontype() not needed in questiontype.php * Code checker issues in questiontype.php * Code checker issues in question.php * Code checker issues in renderer.php * Code checker issues in version.php

2019-02-08 (85)