@@ -41,11 +41,11 @@ class qtype_ordering_test extends advanced_testcase {
     /** @var qtype_ordering instance of the question type class to test. */
     protected $qtype;
 
-    protected function setUp() {
+    protected function setUp(): void {
         $this->qtype = new qtype_ordering();
     }
 
-    protected function tearDown() {
+    protected function tearDown(): void {
         $this->qtype = null;
     }
 
