@@ -2,6 +2,18 @@
 Change log for qtype_ordering
 ========================================
 
+2021-06-13 (03)
+ - fix Issue #63. Restore missing method 'set_default_value()'
+
+2021-06-09 (02)
+ - add message to CHANGES.txt
+
+2021-06-09 (02)
+ - in edit form, rename 'get_default_value()' method to 'get_my_default_value()' for compatability with Moodle >= 3.10
+
+2021-06-08 (01)
+ - modify declaration of parameters accepted by get_default_value method in the edit form
+
 2019-12-14 (00)
  - Thanks Tim Hunt: (1) Update Behat tests to use the MDL-66821 changes (2) Fix Behat test that was failing
  - Thanks HuongNV13: (1) Items crash together horizontally (2) Number/letter no longer tracks with dragged item
